--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,22 @@
 }
 
 .random__images {
-	height: 100%;
+	max-height: 100vh;
 	width: 100%;
 	align-self: center;
+}
+
+.fade {
+	-webkit-transition: opacity 1s ease-in-out;
+	-moz-transition: opacity 1s ease-in-out;
+	-o-transition: opacity 1s ease-in-out;
+	transition: opacity 1s ease-in-out;
+}
+
+.fade-in {
+	opacity: 1;
+}
+
+.fade-out {
+	opacity: 0;
 }
